pollux: correct AKM8963 axis
Change-Id: Ibf560638a4f7e2eb983b20eac11cd9f3b0ea5815

--- a/rootdir/system/etc/sensors.conf
+++ b/rootdir/system/etc/sensors.conf
@@ -8,7 +8,7 @@ bma250input_neg_y = 0
 bma250input_neg_z = 1
 
 # Setup AKM8963 axis
-ak896xmagnetic_layout = 0,0,1,1,0,0,0,1,0
+ak896xmagnetic_layout = -1,0,0,0,1,0,0,0,-1
 
 # Setup accelerometer calibration threshold and axis
 accel_threshold_first = 300
